--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,8 @@ title: Südafrika
 client:
   name: Client Name
   link: "https://www.southafrica.net/de/de/travel"
+  link2: "https://www.nikon.de/de_DE/"
+  link3: "https://www.flysaa.com/de_DE/"
 core-se-link: https://www.secretescapes.com/current-sales
 description: >
   Eine Safari ist mehr als nur Wildtierbeobachtung. In Südafrika gehen Sie auf Großstadt-Safari in Johannesburg, auf Gourmet-Safari in Weingütern und auf Küstensafari auf über 3.000 Strandkilometern.
