--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -3,6 +3,7 @@
   location: Scandic St. Olavs plass & Clarion Hotel Admiral, Norway
   description: A fantastic four-night trip to Norway's Oslo and Bergen, with one of the world's most scenic train journeys between the two cities - including flights and an optional fjord tour
   price: 459
+  image: "https://secretescapes-web.imgix.net/sales/20647/bfb0a79d_6d99_45a1_9eb2_8ba1b40fbb9c.jpg"
   price-description: per person for 4 nights
   saved: 37
   expires: 2020/04/14
@@ -14,7 +15,9 @@
   description: Upscale beachfront stay at the first Nordic balneological health resort, with a supersized spa
   price: 214
   price-description: per room per night
+  image: "https://secretescapes-web.imgix.net/sales/20647/bfb0a79d_6d99_45a1_9eb2_8ba1b40fbb9c.jpg"
   saved: 33
+  tag: flights
   expires: 2020/04/20
   link: https://www.secretescapes.com/farris-bad-larvik-norway/sale?gce_urg=1&gce_scp=0&utm_source=SE&utm_medium=Hub&utm_campaign=12_Norway_201703
 
@@ -24,6 +27,7 @@
   description: A unique stay in the centre of picturesque Bergen, just a stone's throw from the harbour
   price: 48
   price-description: per room per night
+  image: "https://secretescapes-web.imgix.net/sales/20647/bfb0a79d_6d99_45a1_9eb2_8ba1b40fbb9c.jpg"
   saved: 43
   expires: 2020/04/20
   link: https://www.secretescapes.com/first-hotel-marin-bergen-norway/sale?gce_scp=1&utm_source=SE&utm_medium=Hub&utm_campaign=13_Norway_201704
@@ -34,6 +38,7 @@
   description: A brand-new hip hotel in the centre of Bergen, designed by a top New York designer
   price: 73
   price-description: per room per night
+  image: "https://secretescapes-web.imgix.net/sales/20647/bfb0a79d_6d99_45a1_9eb2_8ba1b40fbb9c.jpg"
   saved: 55
   expires: 2020/04/20
   link: https://www.secretescapes.com/magic-hotel-bergen-norway/sale?gce_hpf=1&utm_source=SE&utm_medium=Hub&utm_campaign=14_Norway_201704
@@ -44,6 +49,7 @@
   description: Discover one of the world's sixth best beaches on Norway's gorgeous coast, with breakfast and more
   price: 79
   price-description: per room per night
+  image: "https://secretescapes-web.imgix.net/sales/20647/bfb0a79d_6d99_45a1_9eb2_8ba1b40fbb9c.jpg"
   saved: 47
   expires: 2020/04/20
   link: https://www.secretescapes.com/sola-strand-hotel-sola-norway/sale?gce_hpf=1&utm_source=SE&utm_medium=Hub&utm_campaign=15_Norway_201704
