--- a/_data/reiserouten1.yml
+++ b/_data/reiserouten1.yml
@@ -9,22 +9,22 @@
     title:
     items:
 
-      - title: Von Port Elizabeth nach Plettenberg Bay
+      - title: Von Port Elizabeth nach Plettenberg&nbsp;Bay
         id: img1
-        content: "Von der 'Friendly City' Port Elizabeth geht es zum Tsitsikamma National Park. Als Teil des größeren Garden Route Nationalparks, zieht er sich direkt an der Küste entlang und reizt mit immergrünen Wäldern und einem Überangebot an Aktivitäten. Danach zeigt Plettenberg Bay warum er einer der beliebtesten Badeorte an der Garden Route ist."
+        content: "Von der 'Friendly City' Port Elizabeth geht es zum Tsitsikamma National Park. Als Teil des größeren Garden Route National&shy;parks, zieht er sich direkt an der Küste entlang und reizt mit immergrünen Wäldern und einem Über&shy;angebot an Aktivitäten. Danach zeigt Plettenberg Bay warum er einer der belieb&shy;testen Badeorte an der Garden Route ist."
 
       - title: Lagunenparadies Knysna
         id: img2
-        content: "Die charmante Stadt, bekannt für köstliche Austern und eine malerische Lagune, wird von zwei Felsklippen flankiert. Von den Knysna Heads sind spektakuläre Ausblicke auf Stadt und Lagune vorprogrammiert. "
+        content: "Die charmante Stadt, bekannt für köstliche Austern und eine malerische Lagune, wird von zwei Fels&shy;klippen flankiert. Von den Knysna Heads sind spektakuläre Aus&shy;blicke auf Stadt und Lagune vorprogrammiert. &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;"
 
       - title: "Wilderness & Map of Africa"
         id: img3
-        content: "Einige der besten Strände Südafrikas offenbaren sich an einem Ort, der nicht nach seinem Namen aussieht: Wilderness. Daneben lädt das Städtchen zu Kanufahrten und Paragliding ein – und bietet bei Wilderness Heights vom 'The Map of Africa'-Aussichtspunkt aus einen fantastischen Blick auf den Kaaimans River, der die Umrisse des Kontinents nachzieht."
+        content: "Einige der besten Strände Süd&shy;afrikas offenbaren sich an einem Ort, der nicht nach seinem Namen aussieht: Wilderness. Daneben lädt das Städt&shy;chen zu Kanu&shy;fahrten und Para&shy;gliding ein – und bietet bei Wilderness Heights vom 'The Map of Africa'-Aussichtspunkt aus einen fantas&shy;tischen Blick auf den Kaaimans River, der die Umrisse des Kontinents nachzieht."
 
       - title: Walhauptstadt & Kulturhauptstadt
         id: img4
-        content: "Weiter westwärts: in Hermanus im Western Cape lassen sich von Juli bis November Wale beobachten. Als fabelhafter Abschluss wartet schließlich Kapstadt mit seinem Tafelberg und dem Kap der Guten Hoffnung, bunter Streetart und pulsierender Kultur, den Stadtvierteln Woodstock und dem Bo-Kap. "
+        content: "Weiter westwärts: in Hermanus im Western Cape lassen sich von Juli bis November Wale beob&shy;achten. Als fabelhafter Abschluss wartet schließlich Kapstadt mit seinem Tafel&shy;berg und dem Kap der Guten Hoffnung, bunter Streetart und pulsierender Kultur, den Stadt&shy;vierteln Woodstock und dem Bo-Kaap."
 
       - title: Abstecher in die Kleine Karoo
         id: img5
-        content: "Alternativ können Sie ab George in Richtung Oudtshoorn und von dort aus entlang der malerischen Swartberge bis zur alten Kolonialsiedlung Swellendam fahren. Nach einem Abstecher zum südlichsten Punkt des afrikanischen Kontinents am Cape Agulhas, erreichen Sie schließlich Kapstadt."
+        content: "Alternativ können Sie ab George in Richtung Oudtshoorn und von dort aus entlang der malerischen Swartberge bis zur alten Kolonial&shy;siedlung Swellendam fahren. Nach einem Ab&shy;stecher zum südlichsten Punkt des afrikanischen Kontinents am Cape Agulhas, erreichen Sie schließlich Kapstadt."
