--- a/_data/reiserouten3.yml
+++ b/_data/reiserouten3.yml
@@ -11,20 +11,20 @@
 
       - title: "Lagunenwelt von St. Lucia"
         id: img1
-        content: "Am Eingang zum iSimangaliso Wetland Park liegt St. Lucia im Lagunengebiet des gleichnamigen Sees. Als Tor zu einer einzigartigen Feuchtlandschaft aus Seen, Mangroven, Sümpfen und Küstendünen ist das Städtchen ein beliebtes Ziel. Auf dem Lake St. Lucia können täglich geführten Bootstouren unternommen werden, wobei Sie kolossale Flusspferde aus nächster Nähe bewundern können."
+        content: "Am Eingang zum iSimangaliso Wetland Park liegt St. Lucia im Lagunen&shy;gebiet des gleichnamigen Sees. Als Tor zu einer einzig&shy;artigen Feucht&shy;land&shy;schaft aus Seen, Mangroven, Sümpfen und Küsten&shy;dünen ist das Städt&shy;chen ein beliebtes Ziel. Auf dem Lake St. Lucia können täglich geführten Boots&shy;touren unternommen werden, wobei Sie kolossale Fluss&shy;pferde aus nächster Nähe bewundern können."
 
       - title: Hluhluwe Imfolozi Park
         id: img2
-        content: "Der Hluhluwe Imfolozi Park, seit 1895 Afrikas erstes Naturreservat, bietet seltenen Breitmaulnashörnern ein Schutzgebiet. Daneben zeigen sich auch Giraffen, Geparde, Wildhunde, Löwen, Elefanten und Zebras. Von März bis November können Sie in Begleitung erfahrener Ranger den Park zu Fuß oder mit Pferden in kleinen Gruppen erkunden. "
+        content: "Der Hluhluwe Imfolozi Park, seit 1895 Afrikas erstes Natur&shy;reservat, bietet seltenen Breit&shy;maul&shy;nashörnern ein Schutz&shy;gebiet. Daneben zeigen sich auch Giraffen, Geparde, Wild&shy;hunde, Löwen, Elefanten und Zebras. Von März bis November können Sie in Begleitung erfahrener Ranger den Park zu Fuß oder mit Pferden in kleinen Gruppen erkunden. "
 
       - title: "Tauchen mit Korallen: Sodwana Bay"
         id: img3
-        content: "Sodwana Bay, Teil des iSimangaliso Wetland Parks, ist zwar recht abgelegen und umfasst nur einen schmalen Küstenstreifen, doch ein Ausflug dorthin ist definitiv lohnenswert. Seine Strände ziehen sich gefühlte Ewigkeiten in die Ferne und die Korallenriffe warten mit Walhaien und Mantarochen auf. Vor Ort können Tauchkurse absolviert werden, um mit Marlins zu schwimmen."
+        content: "Sodwana Bay, Teil des iSimangaliso Wetland Parks, ist zwar recht abgelegen und umfasst nur einen schmalen Küsten&shy;streifen, doch ein Ausflug dorthin ist definitiv lohnenswert. Seine Strände ziehen sich gefühlte Ewig&shy;keiten in die Ferne und die Korallen&shy;riffe warten mit Walhaien und Manta&shy;rochen auf. Vor Ort können Tauch&shy;kurse absolviert werden, um mit Marlins zu schwimmen."
 
       - title: Strände und Schildkröten
         id: img4
-        content: "Überhaupt die Strände! Menschenleer und naturbelassen, bieten Sie pures Badevergnügen am Indischen Ozean. Ein ganz besonderes Schauspiel kann zudem von November bis März beobachtet werden. Dann kommen Scharen von Leder- und Karettschildkröten zur Eiablage an die Strände. Nächtliches Trekking eignet sich bestens, um Zeuge davon zu werden."
+        content: "Überhaupt die Strände! Menschenleer und natur&shy;belassen, bieten Sie pures Bade&shy;vergnügen am Indischen Ozean. Ein ganz besonderes Schauspiel kann zudem von November bis März beobachtet werden. Dann kommen Scharen von Leder- und Karett&shy;schild&shy;kröten zur Eiablage an die Strände. Nächtliches Trekking eignet sich bestens, um Zeuge davon zu werden."
 
       - title: "Kosi Bay: das Aquarium"
         id: img5
-        content: "Als Endpunkt der Route bietet sich die Kosi-Bucht an, die aufgrund ihres Artenreichtums den Beinamen 'Aquarium' trägt. Die Bucht ist eigentlich eine Formation aus vier verbundenen Seen mit Zugang zum Ozean. Zahlreiche Wassersportaktivitäten sorgen hier für angenehmen Zeitvertreib, darunter vor allem Schnorcheln oder traditioneller südafrikanischer Fischfang mit Reusen."
+        content: "Als Endpunkt der Route bietet sich die Kosi-Bucht an, die aufgrund ihres Arten&shy;reichtums den Beinamen 'Aquarium' trägt. Die Bucht ist eigentlich eine Formation aus vier verbundenen Seen mit Zugang zum Ozean. Zahlreiche Wasser&shy;sport&shy;aktivitäten sorgen hier für angenehmen Zeit&shy;vertreib, darunter vor allem Schnorcheln oder traditioneller südafri&shy;kanischer Fischfang mit Reusen."
