--- a/_data/sections.yml
+++ b/_data/sections.yml
@@ -8,7 +8,7 @@
   layer: "z-index: 12;"
   title: "Safari das ganze Jahr über"
   rotation: "transform: rotate(4deg);"
-  description: "Das ganze Jahr ist Safari-Zeit. Die europäischen Sommermonate eignen sich besonders für Wildtierbeobachtungen im Krüger Nationalpark oder der Wüstenlandschaft des Kgalagadi Transfrontier Nationalparks. Im südafrikanischen Frühjahr und Sommer (europäischer Herbst und Winter) ist der Addo-Park der richtige Ort."
+  description: "Das ganze Jahr ist Safari-Zeit. Die europäischen Sommermonate eignen sich besonders für Wildtierbeobachtungen im Krüger Nationalpark oder der Wüstenlandschaft des Kgalagadi Transfrontier Nationalparks. Im südafrikanischen Frühjahr und Sommer (europäischer Herbst und Winter) ist der Addo Elephant National Park der richtige Ort."
 
 - id: three
   layer: "z-index: 11;"
