--- a/_data/reiserouten2.yml
+++ b/_data/reiserouten2.yml
@@ -1,7 +1,7 @@
 
 
 - id: two
-  title: "Umwerfend: Panorama Route"
+  title: "Umwerfend: Panorama&nbsp;Route"
   intro: "Etwas kürzer ist die Panorama Route, die durch Bergpässe in der Provinz Mpumalanga führt. Hier wird auf natürliche Weise das Highveld von der tiefer gelegenen Ebene, dem Lowveld getrennt. Auf kleinem Raum versammeln sich etliche Naturschauspiele, die bequem an einem Tag zu besichtigen sind."
   num: "2"
 
@@ -12,16 +12,16 @@
 
       - title: "Sabie & Wasserfälle"
         id: img1
-        content: "Sabie dient als guter Startpunkt für die Route. Die Umgebung um den entspannten, kleinen Ort reizt mit Wasserfällen wie den Bridal Veil Falls oder den Mac Mac Falls. Aus einer Höhe von 56 Metern stürzt das Wasser und bildet die Mac Mac Pools, natürliche Schwimmbecken voll mit klarem Wasser."
+        content: "Sabie dient als guter Startpunkt für die Route. Die Umgebung um den ent&shy;spannten, kleinen Ort reizt mit Wasser&shy;fällen wie den Bridal Veil Falls oder den Mac Mac Falls. Aus einer Höhe von 56 Metern stürzt das Wasser und bildet die Mac Mac Pools, natürliche Schwimm&shy;becken voll mit klarem Wasser."
 
       - title: Blyde River Canyon & God’s Window
         id: img2
-        content: "Nach Graskop beginnt der spannendste Abschnitt der Route, der Blyde River Canyon. Unterwegs kommen Sie an atemberaubenden Aussichtspunkten vorbei - der eindrucksvollste ist unbestritten God’s Window: von hier bietet sich eine spektakuläre Aussicht über das Lowveld."
+        content: "Nach Graskop beginnt der spannendste Abschnitt der Route, der Blyde River Canyon. Unterwegs kommen Sie an atem&shy;beraubenden Aussichts&shy;punkten vorbei - der eindrucks&shy;vollste ist unbe&shy;stritten God’s Window: von hier bietet sich eine spektakuläre Aussicht über das Lowveld. &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; "
 
       - title: "Three Rondavels"
         id: img3
-        content: "Weitere “Oohs” und “Aahs” entlockt folgendes Naturwunder: Bourke’s Luck Potholes. Der Namensgeber war ein glücklicher Goldgräber, die Potholes sind zylinderförmige Hohlräume, die das Wasser in den Fels gewaschen hat. Beeindruckende Blicke werfen Sie danach auf die Three Rondavels, Felsformartionen, die wie traditionelle Rundhütten anmuten. Sie bilden das Ende des Blyde River Canyons."
+        content: "Weitere “Oohs” und “Aahs” entlockt folgendes Natur&shy;wunder: Bourke’s Luck Potholes. Der Namens&shy;geber war ein glücklicher Gold&shy;gräber, die Potholes sind zylinder&shy;förmige Hohlräume, die das Wasser in den Fels gewaschen hat. Beein&shy;druckende Blicke werfen Sie danach auf die Three Rondavels, Fels&shy;formar&shy;tionen, die wie traditionelle Rundhütten anmuten. Sie bilden das Ende des Blyde River Canyons."
 
       - title: Pilgrim’s Rest
         id: img4
-        content: "Wenn Sie den Rückweg zum Ausgangspunkt der Route antreten, können Sie einen Abstecher zum bekannten Goldgräberdorf in Mpumalanga machen. In Pilgrim’s Rest wurden 1873 erhebliche Goldfunde gemacht, was Goldgräber aus der ganzen Welt anlockte. Wer nicht genug von Wasserfällen bekommt, sollte ein Stück zurückfahren und die Route mit den Berlin Falls abschließen, wo das Wasser kerzenförmig herabstürzt."
+        content: "Wenn Sie den Rückweg zum Ausgangs&shy;punkt der Route antreten, können Sie einen Abstecher zum bekannten Gold&shy;gräberdorf in Mpumalanga ma&shy;chen. In Pilgrim’s Rest wurden 1873 erhebliche Gold&shy;funde gemacht, was Goldgräber aus der ganzen Welt anlockte. Wer nicht genug von Wasser&shy;fällen bekommt, sollte ein Stück zurück&shy;fahren und die Route mit den Berlin Falls abschließen, wo das Wasser kerzen&shy;förmig herabstürzt."
